--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="result_area">
 </div>
 
-<script src="query_index.js"></script>
+<script src="trie.js"></script>
 <script src="search.js"></script>
 </body>
 
