--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,7 @@
 <div id="result_area">
 </div>
 
+<script src="trie_index.js"></script>
 <script src="trie.js"></script>
 <script src="search.js"></script>
 </body>
